==> zonque/pn532-espidf/pn532.cpp <==
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/event_groups.h"
#include "esp_system.h"
#include "esp_log.h"
#include "esp_err.h"
#include "pn532.h"
#include "pn532-debug.h"
#define PN532_PACKBUFFSIZ 64

uint32_t PN532::getFirmwareVersion() {
        static const uint8_t pn532response_firmwarevers[] = { 0x00, 0xFF, 0x06, 0xFA, 0xD5, 0x03 };
        uint32_t response;

        pn532_packetbuffer[0] = PN532_COMMAND_GETFIRMWAREVERSION;

        if (!sendCommandCheckAck(pn532_packetbuffer, 1, I2C_WRITE_TIMEOUT))
                return 0;

        read(pn532_packetbuffer, 12);

        // check some basic stuff
        if (0 != strncmp ((char*) pn532_packetbuffer, (char*) pn532response_firmwarevers, 6)) {
                PN532_DEBUG("Firmware does not match!");
                return 0;
        }

        int offset = 7; // Skip a response byte when using I2C to ignore extra data.
        response = pn532_packetbuffer[offset++];
        response <<= 8;
        response |= pn532_packetbuffer[offset++];
        response <<= 8;
        response |= pn532_packetbuffer[offset++];
        response <<= 8;
        response |= pn532_packetbuffer[offset++];

        return response;
}

bool PN532::writeGPIO(uint8_t pinstate) {
        // Make sure pinstate does not try to toggle P32 or P34
        pinstate |= (1 << PN532_GPIO_P32) | (1 << PN532_GPIO_P34);

        // Fill command buffer
        pn532_packetbuffer[0] = PN532_COMMAND_WRITEGPIO;
        pn532_packetbuffer[1] = PN532_GPIO_VALIDATIONBIT | pinstate;  // P3 Pins
        pn532_packetbuffer[2] = 0x00;    // P7 GPIO Pins (not used ... taken by SPI)

        PN532_DEBUG("Writing P3 GPIO: 0x%.2X", pn532_packetbuffer[1]);

        if (!sendCommandCheckAck(pn532_packetbuffer, 3, I2C_WRITE_TIMEOUT))
                return 0;

        read(pn532_packetbuffer, 8);

        PN532_DEBUG("Received: 0x%.2X 0x%.2X 0x%.2X 0x%.2X 0x%.2X 0x%.2X 0x%.2X 0x%.2X",
                pn532_packetbuffer[0], pn532_packetbuffer[1], pn532_packetbuffer[2], pn532_packetbuffer[3],
                pn532_packetbuffer[4], pn532_packetbuffer[5], pn532_packetbuffer[6], pn532_packetbuffer[7]);

        return (pn532_packetbuffer[6] == 0x0f);
}

uint8_t PN532::readGPIO() {
        pn532_packetbuffer[0] = PN532_COMMAND_READGPIO;

        // Send the READGPIO command (0x0C)
        if (!sendCommandCheckAck(pn532_packetbuffer, 1, I2C_WRITE_TIMEOUT))
                return 0;

        // Read response packet (00 FF PLEN PLENCHECKSUM D5 CMD+1(0x0D) P3 P7 IO1 DATACHECKSUM 00)
        read(pn532_packetbuffer, 50);

        /* READGPIO response should be in the following format:

        byte            Description
        -------------   ------------------------------------------
        b0..5           Frame header and preamble (with I2C there is an extra 0x00)
        b6              P3 GPIO Pins
        b7              P7 GPIO Pins (not used ... taken by SPI)
        b8              Interface Mode Pins (not used ... bus select pins)
        b9..10          checksum */

        int p3offset = 7;

#ifdef CONFIG_PN532DEBUG
        ESP_LOGI(TAG, "Received:");
        esp_log_buffer_hex(TAG,pn532_packetbuffer,11);
        printf ("\n");
        ESP_LOGI(TAG, "P3 GPIO: 0x%.2X", pn532_packetbuffer[p3offset]);
        ESP_LOGI(TAG, "P7 GPIO: 0x%.2X", pn532_packetbuffer[p3offset + 1]);
        ESP_LOGI(TAG, "P10 GPIO: 0x%.2X", pn532_packetbuffer[p3offset + 2]);

        // Note: You can use the IO GPIO value to detect the serial bus being used
        switch (pn532_packetbuffer[p3offset + 2]) {
        case 0x00:    // Using UART
                ESP_LOGI(TAG, "Using UART (IO = 0x00)");
                break;
        case 0x01:    // Using I2C
                ESP_LOGI(TAG, "Using I2C (IO = 0x01)");
                break;
        case 0x02:    // Using SPI
                ESP_LOGI(TAG, "Using SPI (IO = 0x02)");
                break;
        }
#endif

        return pn532_packetbuffer[p3offset];
}

bool PN532::SAMConfig() {
        pn532_packetbuffer[0] = PN532_COMMAND_SAMCONFIGURATION;
        pn532_packetbuffer[1] = 0x01; // normal mode;
        pn532_packetbuffer[2] = 0x14; // timeout 50ms * 20 = 1 second
        pn532_packetbuffer[3] = 0x01; // use IRQ pin!

        if (!sendCommandCheckAck (pn532_packetbuffer, 4, I2C_WRITE_TIMEOUT))
                return false;

        read(pn532_packetbuffer, 50);

        return (pn532_packetbuffer[6] == 0x15);
}

bool PN532::setPassiveActivationRetries(uint8_t maxRetries) {
        pn532_packetbuffer[0] = PN532_COMMAND_RFCONFIGURATION;
        pn532_packetbuffer[1] = 5;    // Config item 5 (MaxRetries)
        pn532_packetbuffer[2] = 0xFF; // MxRtyATR (default = 0xFF)
        pn532_packetbuffer[3] = 0x01; // MxRtyPSL (default = 0x01)
        pn532_packetbuffer[4] = maxRetries;

        PN532_DEBUG("Setting MxRtyPassiveActivation to %d", maxRetries);

        if (!sendCommandCheckAck(pn532_packetbuffer, 5, I2C_WRITE_TIMEOUT))
                return 0;

        return 1;
}

bool PN532::readPassiveTargetID(uint8_t cardbaudrate, uint8_t *uid, uint8_t *uidLength, uint16_t timeout) {
        pn532_packetbuffer[0] = PN532_COMMAND_INLISTPASSIVETARGET;
        pn532_packetbuffer[1] = 1; // max 1 cards at once (we can set this to 2 later)
        pn532_packetbuffer[2] = cardbaudrate;

        if (!sendCommandCheckAck(pn532_packetbuffer, 3, I2C_WRITE_TIMEOUT)) {
                PN532_DEBUG("No card(s) read");
                return 0;  // no cards read
        }

        PN532_DEBUG("Waiting for IRQ (indicates card presence)");

        if (!waitReady(timeout)) {
                PN532_DEBUG("IRQ Timeout");
                return 0;
        }

        // read data packet
        read(pn532_packetbuffer, 20);
        // check some basic stuff

        /* ISO14443A card response should be in the following format:

        byte            Description
        -------------   ------------------------------------------
        b0..6           Frame header and preamble
        b7              Tags Found
        b8              Tag Number (only one used in this example)
        b9..10          SENS_RES
        b11             SEL_RES
        b12             NFCID Length
        b13..NFCIDLen   NFCID                                      */

        PN532_DEBUG("Found %d tags", pn532_packetbuffer[7]);

        if (pn532_packetbuffer[7] != 1)
                return 0;

        uint16_t sens_res = pn532_packetbuffer[9];
        sens_res <<= 8;
        sens_res |= pn532_packetbuffer[10];

        PN532_DEBUG("ATQA: 0x%.2X", sens_res);
        PN532_DEBUG("SAK: 0x%.2X", pn532_packetbuffer[11]);

        /* Card appears to be Mifare Classic */
        *uidLength = pn532_packetbuffer[12];

        for (uint8_t i = 0; i < pn532_packetbuffer[12]; i++)
                uid[i] = pn532_packetbuffer[13 + i];

        return 1;
}

bool PN532::inDataExchange(uint8_t *send, uint8_t sendLength, uint8_t *response, uint8_t *responseLength) {
        if (sendLength > PN532_PACKBUFFSIZ - 2) {
                PN532_DEBUG("APDU length too long for packet buffer");
                return false;
        }

        uint8_t i;

        pn532_packetbuffer[0] = 0x40; // PN532_COMMAND_INDATAEXCHANGE;
        pn532_packetbuffer[1] = _inListedTag;
        for (i = 0; i < sendLength; ++i)
                pn532_packetbuffer[i + 2] = send[i];

        if (!sendCommandCheckAck(pn532_packetbuffer, sendLength + 2, I2C_WRITE_TIMEOUT)) {
                PN532_DEBUG("Could not send APDU");
                return false;
        }

        if (!waitReady(1000)) {
                PN532_DEBUG("Response never received for APDU...");
                return false;
        }

        read(pn532_packetbuffer, sizeof(pn532_packetbuffer));
        if (pn532_packetbuffer[0] == 0 && pn532_packetbuffer[1] == 0 && pn532_packetbuffer[2] == 0xff) {
                uint8_t length = pn532_packetbuffer[3];
                if (pn532_packetbuffer[4] != (uint8_t) (~length + 1)) {
                        PN532_DEBUG("Length check invalid 0x%.2X 0x%.2X", length, (~length) + 1);
                        return false;
                }

                if (pn532_packetbuffer[5] == PN532_PN532TOHOST &&
                    pn532_packetbuffer[6] == PN532_RESPONSE_INDATAEXCHANGE) {
                        if ((pn532_packetbuffer[7] & 0x3f) != 0) {
	                        PN532_DEBUG("Status code indicates an error");
                                return false;
                        }

                        length -= 3;

                        if (length > *responseLength)
                                length = *responseLength; // silent truncation...

                        for (i = 0; i < length; ++i)
                                response[i] = pn532_packetbuffer[8 + i];

                        *responseLength = length;

                        return true;
                }

                ESP_LOGE(TAG, "Don't know how to handle this command: 0x%.2X", pn532_packetbuffer[6]);
                return false;
        } else {
                ESP_LOGE(TAG, "Preamble missing");
                return false;
        }
}

bool PN532::inListPassiveTarget () {
        pn532_packetbuffer[0] = PN532_COMMAND_INLISTPASSIVETARGET;
        pn532_packetbuffer[1] = 1;
        pn532_packetbuffer[2] = 0;

        PN532_DEBUG("About to inList passive target");

        if (!sendCommandCheckAck (pn532_packetbuffer, 3, I2C_WRITE_TIMEOUT)) {
                PN532_DEBUG("Could not send inlist message");
                return false;
        }

        if (!waitReady(30000))
                return false;

        read(pn532_packetbuffer, sizeof(pn532_packetbuffer));

        if (pn532_packetbuffer[0] == 0 &&
            pn532_packetbuffer[1] == 0 &&
            pn532_packetbuffer[2] == 0xff) {
                uint8_t length = pn532_packetbuffer[3];
                if (pn532_packetbuffer[4] != (uint8_t) (~length + 1)) {
                        PN532_DEBUG("Length check invalid 0x%.2X 0x%.2X", length, (~length) + 1);
                        return false;
                }

                if (pn532_packetbuffer[5] == PN532_PN532TOHOST &&
                    pn532_packetbuffer[6] == PN532_RESPONSE_INLISTPASSIVETARGET) {
                        if (pn532_packetbuffer[7] != 1) {
                                ESP_LOGI(TAG, "Number of tags inlisted: %d", pn532_packetbuffer[7]);
                                return false;
                        }

                        _inListedTag = pn532_packetbuffer[8];
                        ESP_LOGI(TAG, "Tag number: %d", _inListedTag);

                        return true;
                } else {
                        PN532_DEBUG("Unexpected response to inlist passive host");
                        return false;
                }
        } else {
                PN532_DEBUG("Preamble missing");
                return false;
        }

        return true;
}

uint8_t PN532::mifareclassic_AuthenticateBlock(uint8_t *uid, uint8_t uidLen, uint32_t blockNumber, uint8_t keyNumber, uint8_t *keyData) {
        uint8_t i;

        // Hang on to the key and uid data
        memcpy(_key, keyData, 6);
        memcpy(_uid, uid, uidLen);
        _uidLen = uidLen;

        PN532_DEBUG_HEXDUMP("Trying to authenticate card", _uid, _uidLen);
        PN532_DEBUG("Using authentication KEY %c", keyNumber ? 'B' : 'A');
        PN532_DEBUG_HEXDUMP("Key", _key, 6);

        // Prepare the authentication command //
        pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE; /* Data Exchange Header */
        pn532_packetbuffer[1] = 1; /* Max card numbers */
        pn532_packetbuffer[2] = (keyNumber) ? MIFARE_CMD_AUTH_B : MIFARE_CMD_AUTH_A;
        pn532_packetbuffer[3] = blockNumber; /* Block Number (1K = 0..63, 4K = 0..255 */
        memcpy (pn532_packetbuffer + 4, _key, 6);
        for (i = 0; i < _uidLen; i++)
                pn532_packetbuffer[10 + i] = _uid[i]; /* 4 byte card ID */

        if (!sendCommandCheckAck (pn532_packetbuffer, 10 + _uidLen, I2C_WRITE_TIMEOUT))
                return 0;

        // Read the response packet
        read(pn532_packetbuffer, 12);

        // check if the response is valid and we are authenticated???
        // for an auth success it should be bytes 5-7: 0xD5 0x41 0x00
        // Mifare auth error is technically byte 7: 0x14 but anything other and 0x00 is not good
        if (pn532_packetbuffer[7] != 0x00) {
                PN532_DEBUG_HEXDUMP("Authentification failed: ", pn532_packetbuffer, 12);
                return 0;
        }

        return 1;
}

uint8_t PN532::mifareclassic_ReadDataBlock(uint8_t blockNumber, uint8_t *data) {
        PN532_DEBUG("Trying to read 16 bytes from block %d", blockNumber);

        /* Prepare the command */
        pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
        pn532_packetbuffer[1] = 1; /* Card number */
        pn532_packetbuffer[2] = MIFARE_CMD_READ; /* Mifare Read command = 0x30 */
        pn532_packetbuffer[3] = blockNumber; /* Block Number (0..63 for 1K, 0..255 for 4K) */

        /* Send the command */
        if (!sendCommandCheckAck (pn532_packetbuffer, 4, I2C_WRITE_TIMEOUT)) {
                PN532_DEBUG("Failed to receive ACK for read command");
                return 0;
        }

        /* Read the response packet */
        read(pn532_packetbuffer, 26);

        /* If byte 8 isn't 0x00 we probably have an error */
        if (pn532_packetbuffer[7] != 0x00) {
                PN532_DEBUG_HEXDUMP("Unexpected response", pn532_packetbuffer, 26);
                return 0;
        }

        /* Copy the 16 data bytes to the output buffer        */
        /* Block content starts at byte 9 of a valid response */
        memcpy(data, pn532_packetbuffer + 8, 16);

        PN532_DEBUG("Block %d", blockNumber);
        PN532_DEBUG_HEXDUMP("", data, 16);

        return 1;
}

uint8_t PN532::mifareclassic_WriteDataBlock(uint8_t blockNumber, const uint8_t *data) {
        PN532_DEBUG("Trying to write 16 bytes to block %d", blockNumber);

        /* Prepare the first command */
        pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
        pn532_packetbuffer[1] = 1; /* Card number */
        pn532_packetbuffer[2] = MIFARE_CMD_WRITE; /* Mifare Write command = 0xA0 */
        pn532_packetbuffer[3] = blockNumber; /* Block Number (0..63 for 1K, 0..255 for 4K) */
        memcpy (pn532_packetbuffer + 4, data, 16); /* Data Payload */

        /* Send the command */
        if (!sendCommandCheckAck (pn532_packetbuffer, 20, I2C_WRITE_TIMEOUT)) {
                PN532_DEBUG("Failed to receive ACK for write command");
                return 0;
        }

        vTaskDelay (10 / portTICK_PERIOD_MS);

        /* Read the response packet */
        read(pn532_packetbuffer, 26);

        return 1;
}

uint8_t PN532::mifareultralight_ReadPage(uint8_t page, uint8_t *buffer)
{
        if (page >= 64) {
                PN532_DEBUG("Page value out of range");
                return 0;
        }

        PN532_DEBUG("Reading page %d", page);

        /* Prepare the command */
        pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
        pn532_packetbuffer[1] = 1; /* Card number */
        pn532_packetbuffer[2] = MIFARE_CMD_READ; /* Mifare Read command = 0x30 */
        pn532_packetbuffer[3] = page; /* Page Number (0..63 in most cases) */

        /* Send the command */
        if (!sendCommandCheckAck (pn532_packetbuffer, 4, I2C_WRITE_TIMEOUT)) {
                PN532_DEBUG("Failed to receive ACK for write command");
                return 0;
        }

        /* Read the response packet */
        read(pn532_packetbuffer, 26);
        PN532_DEBUG_HEXDUMP("Received:", pn532_packetbuffer, 26);

        /* If byte 8 isn't 0x00 we probably have an error */
        if (pn532_packetbuffer[7] == 0x00) {
                /* Copy the 4 data bytes to the output buffer         */
                /* Block content starts at byte 9 of a valid response */
                /* Note that the command actually reads 16 byte or 4  */
                /* pages at a time ... we simply discard the last 12  */
                /* bytes                                              */
                memcpy (buffer, pn532_packetbuffer + 8, 4);
        } else {
                PN532_DEBUG_HEXDUMP("Unexpected response reading block:", pn532_packetbuffer, 26);
                return 0;
        }

        PN532_DEBUG_HEXDUMP("Page", buffer, 4);

        return 1;
}

uint8_t PN532::mifareultralight_WritePage(uint8_t page, const uint8_t *data)
{
        if (page >= 64) {
                PN532_DEBUG("Page value out of range");
                return 0;
        }

        PN532_DEBUG("Trying to write 4 byte page %d", page);

        /* Prepare the first command */
        pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
        pn532_packetbuffer[1] = 1; /* Card number */
        pn532_packetbuffer[2] = MIFARE_ULTRALIGHT_CMD_WRITE; /* Mifare Ultralight Write command = 0xA2 */
        pn532_packetbuffer[3] = page; /* Page Number (0..63 for most cases) */
        memcpy (pn532_packetbuffer + 4, data, 4); /* Data Payload */

        /* Send the command */
        if (!sendCommandCheckAck (pn532_packetbuffer, 8, I2C_WRITE_TIMEOUT)) {
                PN532_DEBUG("Failed to receive ACK for write command");
                return 0;
        }

        vTaskDelay (10 / portTICK_PERIOD_MS);

        /* Read the response packet */
        read(pn532_packetbuffer, 26);

        // Return OK Signal
        return 1;
}
