==> MKreher/ble_scanner/barcode_scanner_device/src/pn532/PN532.cpp <==
#include "PN532.h"
#include "PN532_SPI.h"
#include <string.h>
#include "nrf_log.h"

uint32_t PN532::getFirmwareVersion(void)
{
    uint32_t response;

    pn532_packetbuffer[0] = PN532_COMMAND_GETFIRMWAREVERSION;

    if (m_pn532_hal->writeCommand(pn532_packetbuffer, COMMAND_GETFIRMWAREVERSION_LENGTH))
    {
        return 0;
    }

    int16_t status = m_pn532_hal->readResponse(pn532_packetbuffer, REPLY_GETFIRMWAREVERSION_LENGTH);
    if (0 > status)
    {
        return 0;
    }

    response = uint32_big_decode(pn532_packetbuffer + PN532_DATA_OFFSET + 1);

    return response;
}

bool PN532::writeGPIO(uint8_t pinstate)
{
    // Make sure pinstate does not try to toggle P32 or P34
    pinstate |= (1 << PN532_GPIO_P32) | (1 << PN532_GPIO_P34);

    // Fill command buffer
    pn532_packetbuffer[0] = PN532_COMMAND_WRITEGPIO;
    pn532_packetbuffer[1] = PN532_GPIO_VALIDATIONBIT | pinstate; // P3 Pins
    pn532_packetbuffer[2] = 0x00; // P7 GPIO Pins (not used ... taken by I2C)

    NRF_LOG_DEBUG("Writing P3 GPIO: ");
    NRF_LOG_DEBUG("0xX%", pn532_packetbuffer[1]);
    NRF_LOG_DEBUG("\n");

    // Send the WRITEGPIO command (0x0E)
    if (m_pn532_hal->writeCommand(pn532_packetbuffer, 3))
        return 0;

    return (0 < m_pn532_hal->readResponse(pn532_packetbuffer, sizeof(pn532_packetbuffer)));
}

uint8_t PN532::readGPIO(void)
{
    pn532_packetbuffer[0] = PN532_COMMAND_READGPIO;

    // Send the READGPIO command (0x0C)
    if (m_pn532_hal->writeCommand(pn532_packetbuffer, 1))
        return 0x0;

    m_pn532_hal->readResponse(pn532_packetbuffer, sizeof(pn532_packetbuffer));

    /* READGPIO response without prefix and suffix should be in the following format:

      byte            Description
      -------------   ------------------------------------------
      b0              P3 GPIO Pins
      b1              P7 GPIO Pins (not used ... taken by I2C)
      b2              Interface Mode Pins (not used ... bus select pins)
    */


    NRF_LOG_DEBUG("P3 GPIO: 0x%X", pn532_packetbuffer[7]);
    NRF_LOG_DEBUG("P7 GPIO: 0x%X", pn532_packetbuffer[8]);
    NRF_LOG_DEBUG("I0I1 GPIO: 0x%X", pn532_packetbuffer[9]);
    NRF_LOG_DEBUG("\n");

    return pn532_packetbuffer[0];
}

bool PN532::SAMConfig(void)
{
    pn532_packetbuffer[0] = PN532_COMMAND_SAMCONFIGURATION;
    pn532_packetbuffer[1] = 0x01; // normal mode;
    pn532_packetbuffer[2] = 0x14; // timeout 50ms * 20 = 1 second
    pn532_packetbuffer[3] = 0x01; // use IRQ pin!

    NRF_LOG_DEBUG("SAMConfig\n");

    if (m_pn532_hal->writeCommand(pn532_packetbuffer, COMMAND_SAMCONFIGURATION_LENGTH))
        return false;

    return (0 < m_pn532_hal->readResponse(pn532_packetbuffer, REPLY_SAMCONFIGURATION_LENGTH));
}

bool PN532::setPassiveActivationRetries(uint8_t maxRetries)
{
    pn532_packetbuffer[0] = PN532_COMMAND_RFCONFIGURATION;
    pn532_packetbuffer[1] = 5;    // Config item 5 (MaxRetries)
    pn532_packetbuffer[2] = 0xFF; // MxRtyATR (default = 0xFF)
    pn532_packetbuffer[3] = 0x01; // MxRtyPSL (default = 0x01)
    pn532_packetbuffer[4] = maxRetries;

    if (m_pn532_hal->writeCommand(pn532_packetbuffer, 5))
        return 0x0; // no ACK

    return (0 < m_pn532_hal->readResponse(pn532_packetbuffer, sizeof(pn532_packetbuffer)));
}

bool PN532::readPassiveTargetID(
    uint8_t cardbaudrate, uint8_t * uid, uint8_t * uidLength, uint16_t timeout)
{
    pn532_packetbuffer[0] = PN532_COMMAND_INLISTPASSIVETARGET;
    pn532_packetbuffer[1] = 1; // max 1 cards at once (we can set this to 2 later)
    pn532_packetbuffer[2] = cardbaudrate;

    if (m_pn532_hal->writeCommand(pn532_packetbuffer, COMMAND_INLISTPASSIVETARGET_BASE_LENGTH))
    {        
        NRF_LOG_DEBUG("readPassiveTargetID: Write command failed");
        return 0x0; // command failed
    }

    // read data packet
    if (m_pn532_hal->readResponse(
            pn532_packetbuffer, REPLY_INLISTPASSIVETARGET_106A_TARGET_LENGTH, timeout) < 0)
    {
        NRF_LOG_DEBUG("readPassiveTargetID: No Response from NFC device");
        return 0x0;
    }

    // check some basic stuff
    /* ISO14443A card response should be in the following format:

      byte            Description
      -------------   ------------------------------------------
      b0              Tags Found
      b1              Tag Number (only one used in this example)
      b2..3           SENS_RES
      b4              SEL_RES
      b5              NFCID Length
      b6..NFCIDLen    NFCID
    */


    uint8_t response_data[pn532_packetbuffer[3]];
    memcpy(response_data, &pn532_packetbuffer[PN532_DATA_OFFSET + 1], pn532_packetbuffer[3]);
    
    NRF_LOG_DEBUG("readPassiveTargetID: Response data:");
    NRF_LOG_HEXDUMP_DEBUG(response_data, sizeof(response_data));

    if (response_data[0] != 1)
        return 0;

    uint16_t sens_res = response_data[2];
    sens_res <<= 8;
    sens_res |= response_data[3];

    NRF_LOG_DEBUG("ATQA: 0x%X", sens_res);
    NRF_LOG_DEBUG("SAK: 0x%X", response_data[4]);
    NRF_LOG_DEBUG("\n");

    /* Card appears to be Mifare Classic */
    *uidLength = response_data[5];

    for (uint8_t i = 0; i < response_data[5]; i++)
    {
        uid[i] = response_data[6 + i];
    }

    return 1;
}

uint8_t PN532::mifareclassic_AuthenticateBlock(
    uint8_t * uid, uint8_t uidLen, uint32_t blockNumber, uint8_t keyNumber, uint8_t * keyData)
{
    uint8_t i;

    // Hang on to the key and uid data
    memcpy(_key, keyData, 6);
    memcpy(_uid, uid, uidLen);
    _uidLen = uidLen;

    // Prepare the authentication command //
    pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE; /* Data Exchange Header */
    pn532_packetbuffer[1] = 1;                            /* Max card numbers */
    pn532_packetbuffer[2] = (keyNumber) ? MIFARE_CMD_AUTH_B : MIFARE_CMD_AUTH_A;
    pn532_packetbuffer[3] = blockNumber; /* Block Number (1K = 0..63, 4K = 0..255 */
    memcpy(pn532_packetbuffer + 4, _key, 6);
    for (i = 0; i < _uidLen; i++)
    {
        pn532_packetbuffer[10 + i] = _uid[i]; /* 4 bytes card ID */
    }

    if (m_pn532_hal->writeCommand(pn532_packetbuffer, 10 + _uidLen))
        return 0;

    // Read the response packet
    m_pn532_hal->readResponse(pn532_packetbuffer, REPLY_INDATAEXCHANGE_BASE_LENGTH);

    // Check if the response is valid and we are authenticated???
    // for an auth success it should be bytes 5-7: 0xD5 0x41 0x00
    // Mifare auth error is technically byte 7: 0x14 but anything other than 0x00 is not good
    if (pn532_packetbuffer[PN532_DATA_OFFSET + 1] != 0x00)
    {
        NRF_LOG_DEBUG("Authentification failed\n");
        return 0;
    }

    return 1;
}

uint8_t PN532::mifareclassic_ReadDataBlock(uint8_t blockNumber, uint8_t * data)
{
    NRF_LOG_DEBUG("Trying to read 16 bytes from block %d", blockNumber);

    /* Prepare the command */
    pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
    pn532_packetbuffer[1] = 1;               /* Card number */
    pn532_packetbuffer[2] = MIFARE_CMD_READ; /* Mifare Read command = 0x30 */
    pn532_packetbuffer[3] = blockNumber;     /* Block Number (0..63 for 1K, 0..255 for 4K) */

    /* Send the command */
    if (m_pn532_hal->writeCommand(pn532_packetbuffer, 4))
    {
        return 0;
    }

    /* Read the response packet */
    m_pn532_hal->readResponse(pn532_packetbuffer, sizeof(pn532_packetbuffer));

    /* If byte 8 isn't 0x00 we probably have an error */
    if (pn532_packetbuffer[PN532_DATA_OFFSET + 1] != 0x00)
    {
        return 0;
    }

    /* Copy the 16 data bytes to the output buffer        */
    /* Block content starts at byte 9 of a valid response */
    memcpy(&data[0], &pn532_packetbuffer[9 - 1], 16);

    // NRF_LOG_DEBUG("Data of block %d:", blockNumber);
    // NRF_LOG_HEXDUMP_DEBUG(data, 16);

    return 1;
}

uint8_t PN532::mifareclassic_WriteDataBlock(uint8_t blockNumber, uint8_t * data)
{
    /* Prepare the first command */
    pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
    pn532_packetbuffer[1] = 1;                /* Card number */
    pn532_packetbuffer[2] = MIFARE_CMD_WRITE; /* Mifare Write command = 0xA0 */
    pn532_packetbuffer[3] = blockNumber;      /* Block Number (0..63 for 1K, 0..255 for 4K) */
    memcpy(pn532_packetbuffer + 4, data, 16); /* Data Payload */
    int8_t retcode;

    /* Send the command */
    retcode = m_pn532_hal->writeCommand(pn532_packetbuffer, 20);
    if (retcode != 0)
    {
        // error
        return 0;
    }

    /* Read the response packet */
    retcode = m_pn532_hal->readResponse(pn532_packetbuffer, sizeof(pn532_packetbuffer));
    if (retcode != 0)
    {
        // error
        return (0);
    }

    return (1);
}

uint8_t PN532::mifareultralight_ReadPage(uint8_t page, uint8_t * buffer)
{
    if (page >= 64)
    {
        NRF_LOG_DEBUG("Page value out of range\n");
        return 0;
    }

    /* Prepare the command */
    pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
    pn532_packetbuffer[1] = 1;               /* Card number */
    pn532_packetbuffer[2] = MIFARE_CMD_READ; /* Mifare Read command = 0x30 */
    pn532_packetbuffer[3] = page;            /* Page Number (0..63 in most cases) */

    /* Send the command */
    if (m_pn532_hal->writeCommand(pn532_packetbuffer, 4))
    {
        return 0;
    }

    /* Read the response packet */
    m_pn532_hal->readResponse(pn532_packetbuffer, sizeof(pn532_packetbuffer));

    /* If statuy byte (byte 8) isn't 0x00 we probably have an error */
    if (pn532_packetbuffer[PN532_DATA_OFFSET + 1] == 0x00)
    {
        /* Copy the 4 data bytes to the output buffer         */
        /* Block content starts at byte 9 of a valid response */
        /* Note that the command actually reads 16 bytes or 4  */
        /* pages at a time ... we simply discard the last 12  */
        /* bytes                                              */
        memcpy(buffer, pn532_packetbuffer + PN532_DATA_OFFSET + 2, 4);
    }
    else
    {
        return 0;
    }

    // Return OK signal
    return 1;
}

uint8_t PN532::mifareultralight_WritePage(uint8_t page, uint8_t * buffer)
{
    /* Prepare the first command */
    pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
    pn532_packetbuffer[1] = 1;                           /* Card number */
    pn532_packetbuffer[2] = MIFARE_CMD_WRITE_ULTRALIGHT; /* Mifare UL Write cmd = 0xA2 */
    pn532_packetbuffer[3] = page;                        /* page Number (0..63) */
    memcpy(pn532_packetbuffer + 4, buffer, 4);           /* Data Payload */
    int8_t retcode;

    /* Send the command */
    retcode = m_pn532_hal->writeCommand(pn532_packetbuffer, 8);
    if (retcode)
    {
        // error
        return 0;
    }

    /* Read the response packet */
    retcode = m_pn532_hal->readResponse(pn532_packetbuffer, sizeof(pn532_packetbuffer));
    if (retcode != 0)
    {
        // error
        return (0);
    }

    return (1);
}

bool PN532::inDataExchange(
    uint8_t * send, uint8_t sendLength, uint8_t * response, uint8_t * responseLength)
{
    uint8_t i;

    pn532_packetbuffer[0] = 0x40; // PN532_COMMAND_INDATAEXCHANGE;
    pn532_packetbuffer[1] = inListedTag;

    if (m_pn532_hal->writeCommand(pn532_packetbuffer, 2, send, sendLength))
    {
        return false;
    }

    int16_t status = m_pn532_hal->readResponse(response, *responseLength, 1000);
    if (status < 0)
    {
        return false;
    }

    if ((response[0] & 0x3f) != 0)
    {
        NRF_LOG_DEBUG("Status code indicates an error\n");
        return false;
    }

    uint8_t length = status;
    length -= 1;

    if (length > *responseLength)
    {
        length = *responseLength; // silent truncation...
    }

    for (uint8_t i = 0; i < length; i++)
    {
        response[i] = response[i + 1];
    }
    *responseLength = length;

    return true;
}

bool PN532::inListPassiveTarget()
{
    pn532_packetbuffer[0] = PN532_COMMAND_INLISTPASSIVETARGET;
    pn532_packetbuffer[1] = 1;
    pn532_packetbuffer[2] = 0;

    NRF_LOG_DEBUG("inList passive target\n");

    if (m_pn532_hal->writeCommand(pn532_packetbuffer, 3))
    {
        return false;
    }

    int16_t status =
        m_pn532_hal->readResponse(pn532_packetbuffer, sizeof(pn532_packetbuffer), 30000);
    if (status < 0)
    {
        return false;
    }

    if (pn532_packetbuffer[0] != 1)
    {
        return false;
    }

    inListedTag = pn532_packetbuffer[1];

    return true;
}
